--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cloud 9 Vapes Inventory Manager – v1.6.0</title>
+  <title>Cloud 9 Vapes Inventory Manager – v1.7.1</title>
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#0099ff" />
@@ -11,16 +11,22 @@
 </head>
 <body>
 
-  <h1>Cloud 9 Vapes Inventory Manager</h1>
+  <h1>Cloud 9 Vapes Inventory Manager</h1>
 
   <!-- Controls -->
-  <input type="file" id="csvFile" accept=".csv" />
+  <input type="file" id="csvFile" accept=".csv" onchange="handleFileUpload()" />
   <label for="multiplierInput">Reorder Multiplier:</label>
-  <input type="number" id="multiplierInput" min="0.5" step="0.1" value="1.0" onchange="processCSV()" />
+  <input type="number" id="multiplierInput" min="0.5" step="0.1" value="1.0" onchange="saveSettings()" />
   <label for="bufferInput">Safety Buffer (%):</label>
-  <input type="number" id="bufferInput" min="0" max="100" step="5" value="20" onchange="processCSV()" />
+  <input type="number" id="bufferInput" min="0" max="100" step="5" value="20" onchange="saveSettings()" />
   <button onclick="processCSV()">Analyze</button>
   <button onclick="downloadCSV()" id="downloadBtn" style="display:none;">Download Reorder List</button>
+
+  <!-- Upload History -->
+  <section id="historySection">
+    <h2>📁 Upload History</h2>
+    <ul id="uploadHistory"></ul>
+  </section>
 
   <!-- Search & Category Filter -->
   <input type="text" id="searchInput" placeholder="🔍 Search by name or category..." onkeyup="filterResults()" />
@@ -36,7 +42,7 @@
     <div>
       <button onclick="toggleTheme()">🌓 Toggle Dark Mode</button>
     </div>
-    <p>Made with 💨 by <strong>Shane Warren</strong> for <strong>Cloud 9 Vapes</strong> – <strong>v1.6.0</strong></p>
+    <p>Made with 💨 by <strong>Shane Warren</strong> for <strong>Cloud 9 Vapes</strong> – <strong>v1.7.1</strong></p>
   </footer>
 
   <!-- Scripts -->
